# USM-Lap

./: .gitignore  404.html  debug.xlsx  index.html  mkdocs.yml  objects.inv  pyproject.toml  restats  sitemap.xml
autoapi/summary/: index.html
autoapi/usmlap/: index.html
class-diagrams/: brakes.puml  classes.puml  vehicle.puml
data/competition/: FSG 2025.json  FSUK 2024.json
data/drivers/: autocross.json
data/tracks/: Autodromo Nazionale Monza.json  Donington Park.json  FS AutoX Nebraska 2013.json  FS Endurance Australia 2011.json  FS Endurance Germany 2010.json  FSAE Acceleration.json  FSAE Skidpad.json  Indianapolis Motor Speedway.json  Spa-Francorchamps.json
data/units/: quantities.json
data/vehicles/: USM23 Baseline.json  USM26 No Aero.json  USM26 Side Tunnel.json  USM26 with USM23 Aero.json  USM26 with USM24 Aero.json  USM26 with USM25 Aero.json  USM26.json
docs/: index.md
docs/class-diagrams/: brakes.puml  classes.puml  vehicle.puml
docs/process-diagrams/: point-mass-model.puml  qss-solver.puml
docs/stylesheets/: extra.css
explanation/: index.html
how-to-guides/: index.html
process-diagrams/: point-mass-model.puml  qss-solver.puml
schema/: accumulators.schema.json  aero_packages.schema.json  brake_calipers.schema.json  brake_discs.schema.json  brake_pads.schema.json  cells.schema.json  competition.schema.json  drivers.schema.json  master_cylinders.schema.json  motor_controllers.schema.json  motors.schema.json  quantities.schema.json  thermal_derate_curve.schema.json  track.schema.json  tyres.schema.json  units.schema.json  vehicles.schema.json
search/: search_index.json
src/usmlap/: __main__.py  datatypes.py  filepath.py  main.py  profile_performance.py
stylesheets/: extra.css
tests/test_vehicle/: test_brakes.py  test_steering.py  test_transmission.py
tutorials/: index.html
usmlap/: __main__.py  datatypes.py  main.py
usmlap/utils/: proportion.py
(+282 files in other folders)
