[project]
name = "USM-Lap"
version = "0.1.0"
description = "USM laptime simulator, built in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "matplotlib>=3.10.6",
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.18",
    "mkdocstrings-python>=1.18.2",
    "mkdocstrings[python]>=0.30.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.11.7",
    "pydantic-numpy>=8.0.1",
]

[tool.uv]
package = true
