[project]
name = "usmlap"
version = "0.1.0"
description = "USM laptime simulator, built in Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pandas-stubs>=2.3.2.250827",
    "pydantic>=2.11.7",
    "pydantic-numpy>=8.0.1",
    "scipy>=1.16.2",
    "scipy-stubs>=1.16.2.4",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths  = "tests"

[tool.coverage.run]
source_pkgs = ["usmlap"]
omit = ["__main__.py"]

[tool.coverage.report]
skip_empty = true
